--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-auto: true
-markdown: rdiscount
 permalink: /:year/:month/:day/:title
 markdown: rdiscount
 rdiscount:
   extensions: [smart]
+sass:
+  style: :compressed
