Removing the need for explicit layout selection in posts

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,9 @@
 plugins: [jekyll-admin]
 permalink: /:year/:month/:day/:title
+defaults:
+  -
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
