Adding RSS frontmatter

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,8 @@ plugins:
   - jekyll-feed
 permalink: /:year/:month/:day/:title
 author: "Gavin Anderegg"
+title: "anderegg.ca"
+description: "Something (slightly) less boring than nothing."
 defaults:
   -
     scope:
