--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ logo: "/img/logo.png"
 include: [".well-known"]
 docs:
 - title: Home
-  url:
+  url: /
 - title: Projects
   url: /projects/
 - title: Archives
