Updating sitemap to ignore assets

--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,11 @@ defaults:
       layout: "post"
   -
     scope:
+      path: "assets/**"
+    values:
+      sitemap: false
+  -
+    scope:
       path: "wc2017/**/*"
     values:
       sitemap: false
